# linkedin_jobs_analysis

./: .gitignore  README.md  README_Original.md  debug_jobinfo.py  export_cache_to_csv.py  inspect_cache.py  main.py  proxies_list.txt  pyproject.toml  requirements.txt
config/: analysis.py  scraping.py
data/cache/: job_data_cache.pkl  job_ids_cache.pkl
data/cache/old/: job_ids_cache.pkl
data/raw/: jobs_data.csv
notebooks/: analysis_test_cases.ipynb  eda.ipynb  embedding_matching.ipynb  linkedin_scraper_tests.ipynb  llm_analysis.ipynb  sample.csv  sample.txt  skill_keyword_extraction.ipynb
src/analysis/: analysis_main.py  analysis_utils.py  classification_utils.py  extracting_skills_list.py  llm_processing.py  title_classifier.py
src/scraping/: config.py  linkedin_scraper.py  linkedin_scraper_v2.py  scraping_main.py
src/utils/: logger.py
src/visualization/: dashboard.pbix
