[project]
name = "scraping-linkedin-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "sch-paulo",email = "pschmitzjr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "thefuzz (>=0.22.1,<0.23.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "accelerate (>=0.26.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
