[project]
name = "scraping-linkedin-jobs"
version = "0.1.0"
description = ""
authors = [
    {name = "sch-paulo",email = "pschmitzjr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
